--- a/datasci/panda/Week-8-NLP-Databases/Week-8-NLP-Databases/Using Tweepy for Tweet Analysis.ipynb
+++ b/datasci/panda/Week-8-NLP-Databases/Week-8-NLP-Databases/Using Tweepy for Tweet Analysis.ipynb
@@ -8,7 +8,14 @@
     "\n",
     "## Copyright and Licensing\n",
     "\n",
-    "You are free to use or adapt this notebook for any purpose you'd like. However, please respect the [Simplified BSD License](https://github.com/ptwobrussell/Mining-the-Social-Web-2nd-Edition/blob/master/LICENSE.txt) that governs its use."
+    "You are free to use or adapt this notebook for any purpose you'd like. However, please respect the [Simplified BSD License](https://github.com/ptwobrussell/Mining-the-Social-Web-2nd-Edition/blob/master/LICENSE.txt) that governs its use.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://developer.twitter.com/en/portal/projects-and-apps\n",
+    "\n",
+    "https://learning.edx.org/course/course-v1:UCSanDiegoX+DSE200x+3T2021/block-v1:UCSanDiegoX+DSE200x+3T2021+type@sequential+block@28df8bfeff3f459e92d22649eb35c85a/block-v1:UCSanDiegoX+DSE200x+3T2021+type@vertical+block@7e11d675b636439fac875bded5e0424d"
    ]
   },
   {
@@ -48,9 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tweepy\n",
+      "  Downloading tweepy-4.4.0-py2.py3-none-any.whl (65 kB)\n",
+      "Collecting requests-oauthlib<2,>=1.0.0\n",
+      "  Using cached requests_oauthlib-1.3.0-py2.py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: requests<3,>=2.11.1 in c:\\users\\gilfm\\anaconda3\\lib\\site-packages (from tweepy) (2.26.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gilfm\\anaconda3\\lib\\site-packages (from requests<3,>=2.11.1->tweepy) (2.10)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\gilfm\\anaconda3\\lib\\site-packages (from requests<3,>=2.11.1->tweepy) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\gilfm\\anaconda3\\lib\\site-packages (from requests<3,>=2.11.1->tweepy) (1.26.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gilfm\\anaconda3\\lib\\site-packages (from requests<3,>=2.11.1->tweepy) (2021.10.8)\n",
+      "Collecting oauthlib>=3.0.0\n",
+      "  Using cached oauthlib-3.1.1-py2.py3-none-any.whl (146 kB)\n",
+      "Installing collected packages: oauthlib, requests-oauthlib, tweepy\n",
+      "Successfully installed oauthlib-3.1.1 requests-oauthlib-1.3.0 tweepy-4.4.0\n"
+     ]
+    }
+   ],
    "source": [
     "#pip install for the package we will be using\n",
     "!pip install tweepy"
@@ -65,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tweepy.api.API object at 0x0000026AFEB66B50>\n"
+     ]
+    }
+   ],
    "source": [
     "import tweepy\n",
     "\n",
@@ -113,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'API' object has no attribute 'trends_place'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2552/345023543.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# to the URL itself as a special case keyword argument.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mworld_trends\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrends_place\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWORLD_WOE\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mus_trends\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrends_place\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUS_WOE\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mlocal_trends\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrends_place\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLOCAL_WOE\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'API' object has no attribute 'trends_place'"
+     ]
+    }
+   ],
    "source": [
     "LOCAL_WOE_ID=2487889\n",
     "\n",
@@ -493,7 +540,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -507,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
